new app load music from nhacso.net

--- a/Tutorial/.settings/org.eclipse.core.resources.prefs
+++ b/Tutorial/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/datastruct/huffman/Huffman.java=UTF-8
+encoding//src/httpcom/Text.java=UTF-8
 encoding//src/nct/LoadZingRadio.java=UTF-8
