--- a/Tutorial/pom.xml
+++ b/Tutorial/pom.xml
@@ -21,5 +21,15 @@
 			<artifactId>fscontext</artifactId>
 			<version>4.5-b25</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20141113</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
 </project>
